Bug 73545 - Shape with picture fill position is wrong
Summary: Shape with picture fill position is wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-13 09:11 UTC by Priyanka Gaikwad
Modified: 2014-03-17 11:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
docx file (144.41 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-13 09:11 UTC, Priyanka Gaikwad
Details
Docx difference (1.11 MB, image/png)
2014-01-13 09:12 UTC, Priyanka Gaikwad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-01-13 09:11:08 UTC
Created attachment 91936 [details]
docx file

Shape with picture fill position imported wrong

XML Difference :
XML Difference :
Original :
<wp:posOffset>
502920
</wp:posOffset>

Roundtrip :
<wp:posOffset>
0
</wp:posOffset>
Comment 1 Priyanka Gaikwad 2014-01-13 09:12:36 UTC
Created attachment 91937 [details]
Docx difference
Comment 2 Jorendc 2014-01-14 16:55:11 UTC
I can reproduce this, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+ Build ID: cbe7ab3d6188e725414cbb15ca534f96fe51d8c7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-01-12_00:08:19

Document opened with Word for Mac 2011.

Kind regards,
Joren
Comment 3 Commit Notification 2014-01-28 08:49:06 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d71d16958fad1975c17245f064d7dc32c581e220

fdo#73545 Shape position is wrong



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2014-03-17 11:24:24 UTC
Looks like the roundtripped position is correct now, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 88955714d345d8584e86ae34bf5f5d1f3f4af9f7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-03-15_04:16:49

Thanks for fixing!

Kind regards,
Joren