fdo#73545 Shape position is wrong

Issue:
The <wp:align> is missing after roundtrip

XML Difference:
Original:
<wp:positionH relativeFrom="page">
 <wp:align>
 center
 </wp:align>
</wp:positionH>

Roundtrip:
<wp:positionH relativeFrom="page">
 <wp:posOffset>
 0
 </wp:posOffset>
</wp:positionH>

Change-Id: I3c8ef2f0ee3dd84a23fab197ab95f152b850067e