writerfilter/source/dmapper/GraphicImport.cxx
@@ -719,12 +719,13 @@ void GraphicImport::lcl_attribute(Id nName, Value & val)
                         xShapeProps->setPropertyValue("AnchorType", uno::makeAny(text::TextContentAnchorType_AT_PARAGRAPH));
 
                         uno::Reference<lang::XServiceInfo> xServiceInfo(m_xShape, uno::UNO_QUERY_THROW);
-                        if (xServiceInfo->supportsService("com.sun.star.text.TextFrame"))
+
+                        if (xServiceInfo->supportsService("com.sun.star.text.TextFrame") || xServiceInfo->supportsService("com.sun.star.drawing.Shape") )
                         {
-                            // For non-textframes, this is handled already in oox::drawingml::Shape::createAndInsert().
-                            m_pImpl->applyPosition(xShapeProps);
+                               //only the position orientation is handled in applyPosition()
+                                m_pImpl->applyPosition(xShapeProps);
                         }
-                        else if (xServiceInfo->supportsService("com.sun.star.drawing.GroupShape"))
+                        if (xServiceInfo->supportsService("com.sun.star.drawing.GroupShape"))
                         {
                             // Position of the groupshape should be set after children have been added.
                             m_xShape->setPosition(awt::Point(m_pImpl->nLeftPosition, m_pImpl->nTopPosition));
